# VibeSync

./: .gitignore  README.md  audio_caption.py  audio_classification.py  audio_recommender.py  custom_similarity.py  env.yaml  get_song_info.py  makefile  pyproject.toml  requirements.txt  utility.py
Configs/: config1.json  config2.json
Experiment/: audio_caption.py  audio_classification.py  audio_recommender.py  similarity_results1.txt  similarity_results2.txt  utility.py
backend/: app.py  commons.py  custom_similarity.py  database.py  embeddings.py  scrape.py  songs.py
datasets/: setup.py
mtg-dataset/scripts/: get_song_info.py  requirements.txt
mtgdataset/scripts/: requirements.txt
mtgdataset/stats/autotagging_top50tags/: genre.tsv  instrument.tsv  mood_theme.tsv
