[project]
name = "vibesync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.9.0.post1",
    "gdown>=5.2.0",
    "langchain>=0.3.8",
    "langchain-community>=0.3.8",
    "msclap>=1.3.3",
    "selenium>=4.27.1",
    "streamlit>=1.40.2",
]
